não testado :: novas funcionalidade :: ajuste de estrutura :: correções efetuadas